# advent-of-code

./: .gitignore  Cargo.toml  NOTES.md  README.md  aoc.nu  flake.nix  justfile
.cargo/: config.toml
2022/day-1/: Cargo.toml  README.md
2022/day-1/src/: main.rs
2022/day-2/: Cargo.toml  Description.md  README.md
2022/day-2/src/: main.rs
2022/day-3/: Cargo.toml  Description.md  README.md
2022/day-3/src/: main.rs
2023/: Cargo.toml
2023/01/: Task.md
2023/02/: Task.md
2023/1/: Cargo.toml
2023/2/src/: main.rs
2023/3/: Task.md
2023/3/src/: main.rs
2023/benches/: all.rs
2023/day-1/: Cargo.toml  README.md
2023/day-1/benches/: p1.rs  p2.rs  part_1.rs
2023/day-1/src/: lib.rs  main.rs
2023/day-10/: Cargo.toml  README.md
2023/day-10/benches/: p.rs  p1.rs  p2.rs  part_1.rs  part_2.rs
2023/day-10/examples/: 2_solution.txt  3.txt  4.txt  5.txt
2023/day-10/src/: lib.rs  main.rs  tile.rs
2023/day-11/: Cargo.toml  README.md
2023/day-11/benches/: p1.rs  p2.rs  part_1.rs  part_2.rs
2023/day-11/src/: lib.rs  main.rs
2023/day-12/: Cargo.toml  README.md
2023/day-12/benches/: p1.rs  p2.rs
2023/day-12/examples/: 0.txt
2023/day-12/src/: lib.rs  main.rs
2023/day-13/: Cargo.toml  README.md
2023/day-13/benches/: p.rs  p1.rs  p2.rs  part_1.rs
2023/day-13/examples/: 1.txt  2.txt  3.txt  4.txt  6.txt
2023/day-13/src/: lib.rs  main.rs
2023/day-14/: Cargo.toml  README.md
2023/day-14/benches/: p1.rs  p2.rs  part_1.rs  part_2.rs
2023/day-14/src/: lib.rs  main.rs
2023/day-15/: Cargo.toml  README.md
2023/day-15/benches/: p1.rs  p2.rs  part_1.rs  part_2.rs
2023/day-15/src/: lib.rs  main.rs
2023/day-16/: Cargo.toml  README.md
2023/day-16/benches/: p1.rs  p2.rs  part_1.rs  part_2.rs
2023/day-16/examples/: 1.txt  2.txt  3.txt  4.txt  5.txt
2023/day-16/src/: lib.rs  main.rs
2023/day-17/: Cargo.toml  README.md
2023/day-17/benches/: p1.rs  p2.rs  part_2.rs
2023/day-17/examples/: 1.txt
2023/day-17/src/: lib.rs  main.rs
2023/day-19/: Cargo.toml  README.md
2023/day-19/benches/: p.rs  p1.rs  p2.rs  part_1.rs
2023/day-19/src/: lib.rs  main.rs  parse.rs
2023/day-2/: Cargo.toml  README.md
2023/day-2/benches/: p1.rs  p2.rs  part_1.rs
2023/day-2/src/: lib.rs  main.rs  parse.rs
2023/day-20/: Cargo.toml  README.md  input.dot  input.drawio
2023/day-20/benches/: div.rs  p.rs  p1.rs  p2.rs  parse.rs
2023/day-20/docs/: input.dot  input.drawio
2023/day-20/examples/: 0.txt  1.txt
2023/day-20/src/: lib.rs  main.rs  parse.rs
2023/day-24/: Cargo.toml  README.md
2023/day-24/benches/: p.rs  p1.rs  p2.rs
2023/day-24/src/: lib.rs  main.rs
2023/day-25/: Cargo.toml  README.md  input.dot
2023/day-25/benches/: p1.rs  p2.rs
2023/day-25/src/: lib.rs  main.rs
2023/day-3/: Cargo.toml  README.md
2023/day-3/benches/: p1.rs  p2.rs
2023/day-3/src/: lib.rs  main.rs
2023/day-4/: Cargo.toml  Description.md  README.md
2023/day-4/benches/: p1.rs  p2.rs
2023/day-4/src/: lib.rs  main.rs
2023/day-5/: Cargo.toml  README.md
2023/day-5/benches/: p.rs  p1-parse.rs  p1.rs  p2.rs  task_0.rs  task_1.rs
2023/day-5/src/: lib.rs  main.rs
2023/day-6/: Cargo.toml  README.md
2023/day-6/benches/: p1.rs  p2.rs  part_1.rs  task_0.rs  task_1.rs
2023/day-6/src/: lib.rs  main.rs
2023/day-7/: Cargo.toml  README.md  TASKS.md
2023/day-7/benches/: p1.rs  p2.rs  task_0.rs  task_1.rs
2023/day-7/src/: lib.rs  lut.rs  main.rs
2023/day-8/: Cargo.toml  README.md  TASKS.md
2023/day-8/benches/: p.rs  p1.rs  p2.rs  part_1.rs  part_2.rs  task_0.rs  task_1.rs
2023/day-8/examples/: 2
2023/day-8/src/: lib.rs  main.rs
2023/day-9/: Cargo.toml  README.md  TASKS.md
2023/day-9/benches/: p.rs  p1.rs  p2.rs  part_1.rs
2023/day-9/src/: iter.rs  lib.rs  main.rs
2024/day-1/: Cargo.toml  README.md
2024/day-1/benches/: all.rs  p1.rs  p2.rs  parse.rs  part_1.rs  part_2.rs
2024/day-1/src/: lib.rs  main.rs
2024/day-10/: Cargo.toml  README.md
2024/day-10/benches/: p.rs  p1.rs  p2.rs
2024/day-10/src/: lib.rs  main.rs
2024/day-11/: Cargo.toml  README.md
2024/day-11/benches/: p.rs  p1.rs  p2.rs
2024/day-11/src/: lib.rs  main.rs
2024/day-12/: Cargo.toml  README.md
2024/day-13/: Cargo.toml  README.md
2024/day-14/: Cargo.toml  README.md
2024/day-15/: Cargo.toml  README.md
2024/day-16/: Cargo.toml  README.md
2024/day-17/: Cargo.toml  README.md
2024/day-18/: Cargo.toml  README.md
2024/day-18/benches/: p.rs  p1.rs  p2.rs  parse.rs
2024/day-18/src/: lib.rs  main.rs
2024/day-19/: Cargo.toml  README.md
2024/day-19/benches/: p.rs  p1.rs  p2.rs  parse.rs
2024/day-19/src/: lib.rs  main.rs
2024/day-2/: Cargo.toml  README.md
2024/day-3/: Cargo.toml  README.md
2024/day-4/: Cargo.toml  README.md
2024/day-5/: Cargo.toml  README.md
2024/day-6/: Cargo.toml  README.md
2024/day-7/: Cargo.toml  README.md
2024/day-8/: Cargo.toml  README.md
2024/day-9/: Cargo.toml  README.md
aoc/: Cargo.toml
aoc/benches/: num_digits.rs
aoc/src/: assert.rs  constvec.rs  coords.rs  iter.rs  lib.rs  number.rs  parsing.rs  point.rs  ptr.rs  range.rs  slice.rs  string.rs  u8.rs
scripts/: aoc.nu
template/: Cargo.toml  README.md
template/benches/: all.rs  p1.rs  p2.rs  parse.rs  part_1.rs  part_2.rs  task_0.rs  task_1.rs
template/src/: lib.rs  main.rs
(+74 files in other folders)
