[workspace]
resolver = "2"

members = ["*/day-*", "aoc", "2023"]

[workspace.dependencies]
regex = "1.10.2"
lazy_static = "1.4.0"
aoc = { path = "aoc" }
itertools = "0.12.0"
rayon = "1.8.0"
criterion = {version = "0.5.1"}
rand = "0.8.5"
gcd = "2.3.0"
arrayvec = "0.7.4"
num-traits = "0.2.17"
fxhash = "0.2.1"

[profile.release]
# codegen-units = 1
# strip = "debuginfo"
# opt-level = 3
# panic = "abort"
# lto = "fat"
