[package]
name = "aoc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = {workspace = true}
rand = {workspace = true}
gcd = {workspace = true}
itertools = {workspace = true}
num-traits = {workspace = true}