[package]
name = "{{package_name}}"
version = "0.1.0"
edition = "2021"

[dependencies]
regex = {workspace = true}
lazy_static = {workspace = true}
aoc = { workspace = true }
itertools = { workspace = true }
rayon = { workspace = true }
criterion = {workspace = true}
rand = {workspace = true}

[[bench]]
name = "part_1"
harness = false

[[bench]]
name = "part_2"
harness = false