[package]
name = "aoc-2023-4"
version = "0.1.0"
edition = "2021"

[dependencies]
regex = {workspace = true}
lazy_static = {workspace = true}
aoc = { workspace = true }
itertools = { workspace = true }
rayon = { workspace = true }
criterion = {workspace = true}
rand = {workspace = true}
arrayvec = {workspace = true}
num-traits = {workspace = true}

[[bench]]
name = "p1"
harness = false

[[bench]]
name = "p2"
harness = false
