[package]
name = "aoc-2023-5"
version = "0.1.0"
edition = "2021"

[dependencies]
regex = {workspace = true}
lazy_static = {workspace = true}
aoc = { workspace = true }
itertools = { workspace = true }
rayon = { workspace = true }
criterion = { workspace = true }

[[bench]]
name = "part_1"
harness = false

[[bench]]
name = "part_2"
harness = false