[package]
name = "aoc-2024-11"
version = "0.1.0"
edition = "2021"

[dependencies]
regex = {workspace = true}
lazy_static = {workspace = true}
aoc = { workspace = true }
itertools = { workspace = true }
rayon = { workspace = true }
criterion = {workspace = true}
rand = {workspace = true}
fxhash = {workspace = true}
ahash = {workspace = true}
memoize = {workspace = true}
dashmap = "6.1.0"

[[bench]]
name = "p"
harness = false
